# playhouse-connector-cpp

./: .gitmodules  CMakeLists.txt
cmake/: AddGitSubmodule.cmake
playhouse-connector/src/: my_lib.cc
playhouse_connector/: CMakeLists.txt
playhouse_connector/tests/: CMakeLists.txt
